Bug 474539 - Export to image window layout broken
Summary: Export to image window layout broken
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: exporter (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-15 08:25 UTC by Lassi Väätämöinen
Modified: 2023-09-19 23:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.38.2 (KDE releases 23.08.2)
Sentry Crash Report:


Attachments
Faulty export UI screenshot (12.23 KB, image/png)
2023-09-15 08:25 UTC, Lassi Väätämöinen
Details
Screenshot on openSUSE 15.4 (30.75 KB, image/png)
2023-09-16 08:32 UTC, Ralf Habacker
Details
Gammaray screenshot from working umbrello 21.12.3 on openSUSE 15.4 (Qt 5.15.2, KF5 5.90.0) (112.07 KB, image/png)
2023-09-17 16:39 UTC, Ralf Habacker
Details
Gammaray screenshot from broken umbrello 23.11.70 on openSUSE 15.4 (Qt 5.15.2, KF5 5.90.0) (82.84 KB, image/png)
2023-09-17 16:47 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lassi Väätämöinen 2023-09-15 08:25:37 UTC
Created attachment 161628 [details]
Faulty export UI screenshot

SUMMARY
When exporting to images, the export preferences window has totally broken layout. All UI elements are bunched up in upper left corner.


STEPS TO REPRODUCE
1. Create several diagrams
2. File -> Export diagrams as pictures 
3. Select "current diagram"
4. Observe export settings window.

OBSERVED RESULT
UI elements bunched up in upper left hand corner. Cannot operate UI properly

EXPECTED RESULT
UI shown with elements separated, so user can interact with them

SOFTWARE/OS VERSIONS

Umbrello Version 2.38.3 (Applications 23.04.3)

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.2.0-31-generic (64-bit)
Graphics Platform: X11
Processors: 4 × 11th Gen Intel® Core™ i7-11850H @ 2.50GHz
Memory: 22,7 GiB of RAM
Graphics Processor: SVGA3D; build: RELEASE; LLVM;
Manufacturer: innotek GmbH
Product Name: VirtualBox
System Version: 1.2
Comment 1 Ralf Habacker 2023-09-16 08:32:54 UTC
Created attachment 161655 [details]
Screenshot on openSUSE 15.4

On openSUSE 15.4 (KDE 5.90.0, Qt 5.15.2) the problem with a build from git master branch does not occur, so I assume this is a problem with a 3rdparty component (KDE, Qt or other) on KDE Neon.
Comment 2 Lassi Väätämöinen 2023-09-16 10:10:37 UTC
Better get your fixes ready then, as it happens on openSUSE Tumbleweed too. So it is bound to break.

Operating System: openSUSE Tumbleweed 20230913
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.2-1-default (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 580 Series
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7B79
System Version: 4.0
Comment 3 Ralf Habacker 2023-09-16 15:29:38 UTC
(In reply to Lassi Väätämöinen from comment #2)

> Operating System: openSUSE Tumbleweed 20230913
> KDE Frameworks Version: 5.110.0
> Qt Version: 5.15.10
> Kernel Version: 6.5.2-1-default (64-bit)
> Graphics Platform: X11

I can confirm the problem on this platform and additionally found that the search dialog is also affected.

However, I still think there must be a change or bug in the KDE or Qt packages used, since this dialog has worked without problems since 2006.
Comment 4 Ralf Habacker 2023-09-17 16:39:47 UTC
Created attachment 161675 [details]
Gammaray screenshot from working umbrello 21.12.3 on openSUSE 15.4 (Qt 5.15.2, KF5 5.90.0)
Comment 5 Ralf Habacker 2023-09-17 16:47:13 UTC
Created attachment 161677 [details]
Gammaray screenshot from broken umbrello 23.11.70 on openSUSE 15.4 (Qt 5.15.2, KF5 5.90.0)

I can also confirm that the problem occurs with umbrello from git master branch on openSUSE 15.4, Qt 5.15.2, KF5 5.90.0

The attached screenshot from gammaray shows that in this case the widget structure of the ExportAllViews dialog was not built properly.
Comment 6 Ralf Habacker 2023-09-18 04:44:53 UTC
Git commit 9d63ccbff8991209f00e87c67fca44b408f9b2be by Ralf Habacker.
Committed on 18/09/2023 at 06:44.
Pushed by habacker into branch 'release/23.08'.

Fixed display errors in the dialogs for searching objects and exporting images

With the removal of kdelibs4support the correct initialization of the main
widget was missing in the mentioned dialogs.

Fixup for commit 3fa47506f43abbbac6655c7cf137af4f88229b1d
FIXED-IN:23.08.2

M  +2    -0    umbrello/dialogs/exportallviewsdialog.cpp
M  +2    -0    umbrello/dialogs/finddialog.cpp

https://invent.kde.org/sdk/umbrello/-/commit/9d63ccbff8991209f00e87c67fca44b408f9b2be
Comment 7 Ralf Habacker 2023-09-18 05:00:14 UTC
Git commit 0ebb8343d0a6c8b754c4c8143b446f5075ad9d7f by Ralf Habacker.
Committed on 18/09/2023 at 06:59.
Pushed by habacker into branch 'master'.

Fixed display errors in the dialogs for searching objects and exporting images

With the removal of kdelibs4support the correct initialization of the main
widget was missing in the mentioned dialogs.

Fixup for commit 3fa47506f43abbbac6655c7cf137af4f88229b1d
FIXED-IN:23.08.2
(cherry picked from commit 9d63ccbff8991209f00e87c67fca44b408f9b2be)

M  +2    -0    umbrello/dialogs/exportallviewsdialog.cpp
M  +2    -0    umbrello/dialogs/finddialog.cpp

https://invent.kde.org/sdk/umbrello/-/commit/0ebb8343d0a6c8b754c4c8143b446f5075ad9d7f