Fixed display errors in the dialogs for searching objects and exporting images

With the removal of kdelibs4support the correct initialization of the main
widget was missing in the mentioned dialogs.

Fixup for commit 3fa47506f43abbbac6655c7cf137af4f88229b1d

BUG:474539
FIXED-IN:23.08.2
(cherry picked from commit 9d63ccbff8991209f00e87c67fca44b408f9b2be)